tests/snapshots/run_wpt_conformance__litert_convTranspose2d_float16_4D_input_and_filter_tensors_options_dilations.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 64
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float16 4D input and filter tensors options.dilations, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ConvTranspose2d { input: 1, filter: 0, options: Some(MLConvTranspose2dOptions { label: "", padding: [], strides: [], dilations: [2, 2], output_padding: [], output_sizes: None, groups: 1, input_layout: "", filter_layout: "", bias: None }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dInput: f16[1, 1, 3, 3];
  }

  consts {
    operand_0: f16[1, 1, 2, 2] @bytes([120, 57, 183, 59, 158, 58, 158, 56]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, operand_0, bias=null, dilations=[2, 2], filterLayout="", groups=1, inputLayout="", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
