tests/snapshots/run_wpt_conformance__litert_convTranspose2d_float16_4D_input_and_filter_tensors_options_inputLayout_nhwc_options_filterLayout_iohw.snap
---
source: tests/run_wpt_conformance.rs
assertion_line: 64
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
conv_transpose2d.https.any.js convTranspose2d float16 4D input and filter tensors options.inputLayout=nhwc options.filterLayout=iohw, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: ConvTranspose2d { input: 1, filter: 0, options: Some(MLConvTranspose2dOptions { label: "", padding: [], strides: [], dilations: [], output_padding: [], output_sizes: None, groups: 1, input_layout: "nhwc", filter_layout: "iohw", bias: None }), outputs: [2] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    convTranspose2dInput: f16[1, 3, 3, 1];
  }

  consts {
    operand_0: f16[1, 2, 3, 3] @bytes([228, 58, 4, 57, 24, 57, 181, 58, 155, 47, 240, 59, 66, 53, 254, 58, 196, 57, 215, 59, 230, 43, 39, 53, 0, 58, 74, 54, 107, 48, 139, 52, 199, 54, 163, 48]);
  }

  nodes {
    [convTranspose2dOutput] = convTranspose2d(convTranspose2dInput, operand_0, bias=null, dilations=[], filterLayout="iohw", groups=1, inputLayout="nhwc", label="", outputPadding=[], outputSizes=null, padding=[], strides=[]);
  }

  outputs { convTranspose2dOutput; }
}
